--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
   "singleQuote": true,
   "trailingComma": "all",
-  "useTabs": true,
-  "tabWidth": 4
+  "tabWidth": 4,
+  "quoteProps": "preserve",
+  "proseWrap": "never"
 }
